<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Droid Video Recorder</string>
    <string name="txt_titulo">Settings</string>
    <string name="txt_tela_Config">SETTINGS SCREEN</string>
    <string name="spf_exibe_iniciar">Displays the settings screen to start?</string>
    <string name="txt_qualidade_camera_traseira">Low</string>
    <string name="txt_qualidade_camera_frontal">Low</string>
    <string name="txt_camera_traseira">Back camera quality</string>
    <string name="txt_camera_frontal">Front camera quality</string>
    <string name="spf_exibe_tempo_gravacao">Displays recording rate?</string>
    <string name="spf_titulo">Time</string>
    <string name="txt_gravacao_videos">Local recording of videos</string>
    <string name="txt_local_gravacao_videos">Internal</string>
    <string name="parando">Stopping</string>
    <string name="visualizando">Viewing</string>
    <string name="gravando">Recording</string>
    <string name="fechando">Closing</string>
    <string name="saindoDVR">Leaving the DVR</string>
    <string name="gravar">Record</string>
    <string name="parar">Stop</string>
    <string name="fechar">Close</string>
    <string name="sair">Get out</string>
    <string name="naoEntendi">Did not understand what you said</string>
    <string name="abrindoDVRInvisivel">Opening DVR in invisible mode</string>
    <string name="abrindoDVR">Opening DVR</string>
    <string name="parandoGravacao">Stop Recording</string>
    <string name="leComando">Read the commands</string>
    <string name="aceitaComandoPorVoz">Supports voice control</string>
    <string name="aceitaComandoPorTexto">Accepts command by text</string>
    <string name="escuta">Listening</string>
    <string name="comando">Command</string>
    <string name="fala">Speaks</string>
    <string name="abrindoDVRConfig">Opening DVR with a configuration screen</string>
    <string name="visualizandoCameraFronta">Viewing with the front camera</string>
    <string name="visualizandoCameraTraseira">Viewing with the rear camera</string>
    <string name="abrirConfiguracao">Open Configuration</string>
    <string name="modoOculto">hidden mode</string>
    <string name="modoVisivel">visible mode</string>
    <string name="voltar">come back</string>
</resources>
