<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/txt_tela_Config">
        <CheckBoxPreference
            android:key="chk_exibeAoIniciar"
            android:summary="@string/chk_exibe_iniciar"
            android:defaultValue="true"
            android:title="@string/txt_titulo">
        </CheckBoxPreference>

        <ListPreference
            android:key="ltp_qualidadeCameraTraseira"
            android:summary="@string/txt_qualidade_camera_traseira"
            android:title="@string/txt_camera_traseira"
            android:entries="@array/qualidadeCameraTraseira"
            android:entryValues="@array/valor_qualidadeCameraTraseira"
            android:defaultValue="0">
        </ListPreference>

        <ListPreference
            android:key="ltp_qualidadeCameraFrontal"
            android:summary="@string/txt_qualidade_camera_frontal"
            android:title="@string/txt_camera_frontal"
            android:entries="@array/qualidadeCameraFrontal"
            android:entryValues="@array/valor_qualidadeCameraFrontal"
            android:defaultValue="0">
        </ListPreference>


    </PreferenceCategory>

</PreferenceScreen>